# llm-company-scrape

./: .gitignore  pyproject.toml
data/: LCAW Climate Innovation Open Letter - Public.txt  extracted.csv  extracted_subset.csv
llm_company_scrape/: cache.py
notebook/: 01-demo.html  01-demo.ipynb
