[tool.poetry]
name = "llm-company-scrape"
version = "0.1.0"
description = ""
authors = ["Keith Kam <keithkamyk@gmail.com>"]
readme = "README.md"
packages = [{include = "llm_company_scrape"}]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
ipykernel = "^6.29.5"
instructor = "^1.3.4"
diskcache = "^5.6.3"
python-dotenv = "^1.0.1"
pandas = "^2.2.2"
tavily-python = "^0.3.4"
rich = "^13.7.1"
nest-asyncio = "^1.6.0"
requests-cache = "^1.2.1"
scikit-learn = "^1.5.1"
umap-learn = "^0.5.6"
plotly = "^5.22.0"
nbformat = "^5.10.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
